
The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.8.9\...HEAD[Unreleased]

=== Added

* Add methods to optimize the output image to the documents
  ({pull-request-url}/301[#301])
* Add `--size` option to set the module size in pixels
  ({pull-request-url}/304[#304])

== {compare-url}/v0.8.8\...v0.8.9[0.8.9] - 2023-12-07

=== Added

* Add installation instructions via package manager to documentation
  ({pull-request-url}/294[#294])

=== Changed

* Update documentation ({pull-request-url}/295[#295])

== {compare-url}/v0.8.7\...v0.8.8[0.8.8] - 2023-12-05

=== Added

* Add aliases to subcommands ({pull-request-url}/290[#290])

=== Changed

* Change `--help` and `--version` to print additional information
  ({pull-request-url}/289[#289])

=== Fixed

* Fix exit status when input is SVG ({pull-request-url}/291[#291])

== {compare-url}/v0.8.6\...v0.8.7[0.8.7] - 2023-12-03

=== Changed

* Change settings for the release profile ({pull-request-url}/287[#287])

== {compare-url}/v0.8.5\...v0.8.6[0.8.6] - 2023-12-03

=== Fixed

* Fix an issue where the input format is always determined to be SVG, if the
  input file extension represented SVG ({pull-request-url}/285[#285])

== {compare-url}/v0.8.4\...v0.8.5[0.8.5] - 2023-11-29

=== Changed

* Update dependencies

== {compare-url}/v0.8.3\...v0.8.4[0.8.4] - 2023-11-04

=== Added

* Add Code of Conduct ({pull-request-url}/252[#252])

== {compare-url}/v0.8.2\...v0.8.3[0.8.3] - 2023-10-03

=== Removed

* Remove version from the book ({pull-request-url}/240[#240])

== {compare-url}/v0.8.1\...v0.8.2[0.8.2] - 2023-09-30

=== Added

* Add the usage to the book ({pull-request-url}/227[#227])

== {compare-url}/v0.8.0\...v0.8.1[0.8.1] - 2023-09-12

=== Changed

* Rewrite the book with Antora ({pull-request-url}/224[#224])

== {compare-url}/v0.7.5\...v0.8.0[0.8.0] - 2023-09-07

=== Changed
