@@ -19,7 +19,7 @@ mod metadata;
 use std::{io, process::ExitCode};
 
 use image::ImageError;
-use qrencode::types::QrError;
+use qrcode::types::QrError;
 use rqrr::DeQRError;
 
 fn main() -> ExitCode {
