@@ -23,6 +23,10 @@ project adheres to https://semver.org/[Semantic Versioning].
 * Add `--size` option to set the module size in pixels
   ({pull-request-url}/304[#304])
 
+=== Changed
+
+* Change to use `qrcode` crate ({pull-request-url}/305[#305])
+
 == {compare-url}/v0.8.8\...v0.8.9[0.8.9] - 2023-12-07
 
 === Added
